commit fait appre soutenance

--- a/kasa/src/components/Collapse/collapse.scss
+++ b/kasa/src/components/Collapse/collapse.scss
@@ -1,10 +1,10 @@
 @import "../../style/var_mix.scss";
 
 .collapse-content{
-    width: 70%;
+    width: 90%;
     margin: auto;
     display: grid;
-    gap: 30px;
+    margin-top: 10px;
 
     .content-description{
       position: relative;
