--- a/kasa/src/components/Appart Content/Des_Equip/desEquip.scss
+++ b/kasa/src/components/Appart Content/Des_Equip/desEquip.scss
@@ -7,14 +7,11 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(1, 1fr);
-  gap: 30px;
-
-  
   .content-description{
     position: relative;
     width: 100%;
-    height: auto;
-    background-color: $colorKasa;
+    top: -20px;
+    left: -5px;
     border-radius: 10px;
   } 
 
