--- a/kasa/src/components/Appart Content/Presentation/presentation.scss
+++ b/kasa/src/components/Appart Content/Presentation/presentation.scss
@@ -46,9 +46,9 @@
         height: 64px;
         width: 64px;
         
-      img{
+      .img-host{
         border-radius: 50%;
-        width: 100%;
+        width: 64px;
       }  
   
       p{
